--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_masthead.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_masthead.scss
@@ -4,22 +4,16 @@
   border-bottom: $hb-thin-border;
   @include hb-global-color('border-color', 'gray');
 
-  .su-site-header-nav-container {
-    display: grid;
-    grid-template-columns: calc(75% - #{hb-calculate-rems(8px)}) calc(25% - #{hb-calculate-rems(8px)});
-    gap: hb-calculate-rems(16px);
-    width: 100%;
+  .su-lockup {
+    // Match and override inherited 'decanter' styles
+    flex: calc(83.33% - #{hb-calculate-rems(16px)});
+    max-width: calc(83.33% - #{hb-calculate-rems(16px)});
+    z-index: $hb-z-index-lockup;
 
     @include grid-media-min('lg') {
-      display: block;
-      gap: unset;
+      flex: 0 0 calc(calc(2 / 3 * 100%) - 6.67px);
+      max-width: calc(calc(2 / 3 * 100%) - 6.67px);
     }
-  }
-
-  .su-lockup {
-    width: 100%;
-    max-width: 100%;
-    z-index: $hb-z-index-lockup;
 
     &__line1,
     &__line2,
